PyMaker/datas/object2/RawHTML/i19301/Python_DOC_referPages.invalid-syntax-on-a-python-try-statement.txt
<div class="post-text" itemprop="text">
<p>Within my script I have one large While: try: loop. Within this, I have want to increase some pointers in the case that a picture was successfully downloaded from my camera and resized, here is what my code looks like within my larger python script:</p>
<pre><code>import os.path
try os.path.isfile('/home/pi/CompPictures' + picturenumber + '.JPG'):
    os.system('sudo rm /home/pi/Pictures/IMG_0001.JPG')
    os.system('sudo rm /home/pi/output.bin')
    picturenumber = int(picturenumber))+1
except:
    pass
</code></pre>
<p>picturenumber contains a string '1' to start and then will increase.</p>
<p>I'm only wanting this to run one. So essentially I'm running through my larger code continuously, then for every sweep through the larger loop, I want to check this try statement once and if the file exists, delete some files and increase the pointer.</p>
<p>I'm getting the following error.</p>
<pre><code>  File "pijob.py", line 210
    try os.path.isfile('/home/pi/CompPictures' + picturenumber + '.JPG'):
         ^
SyntaxError: invalid syntax
</code></pre>
<p>Extremely new to python...so hope it isn't a simple mistake :(</p>
</div>
<div class="post-text" itemprop="text">
<p>You need a new line and a <code>:</code>. Try this:</p>
<pre><code>try:
    os.path.isfile('/home/pi/CompPictures' + picturenumber + '.JPG') #
    os.system('sudo rm /home/pi/Pictures/IMG_0001.JPG')
    os.system('sudo rm /home/pi/output.bin')
    picturenumber = int(picturenumber))+1
except:
    pass
</code></pre>
<p>You can include a <code>finally</code> statement to execute code regardless of the outcome:</p>
<pre><code>try:
    #code
except:
    pass
finally:
    #this code will execute whether an exception was thrown or not
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>try like this,</p>
<pre><code>import os.path
try :
    os.path.isfile('/home/pi/CompPictures' + picturenumber + '.JPG') #
    os.system('sudo rm /home/pi/Pictures/IMG_0001.JPG')
    os.system('sudo rm /home/pi/output.bin')
    picturenumber = int(picturenumber))+1
except:
    pass
</code></pre>
<p>python try syntax,</p>
<pre><code>try:
   some_code
except:
   pass
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>The syntax for try/except in Python is</p>
<pre><code>try:
    # code that might raise the exception
    pass
except &lt;exceptions go here&gt;:
    # code that should happen when the
    # specified exception is/exceptions are
    # raised
    pass
except &lt;other exceptions go here&gt;:
    # different code that should happen when
    # the specified exception is/exceptions
    # are raised
    pass
else:
    # code that follows the code that 
    # might raise the exception, but should
    # only execute when the exception isn't
    # raised
    pass
finally:
    # code that will happen whether or not
    # an exception was raised
    pass
</code></pre>
<p>A couple of general guidelines:</p>
<ul>
<li>Unless you really want your code to silently handle all exceptions, catch specific exceptions. This will allow you to better handle anything that goes wrong.</li>
<li>When using multiple <code>except</code> blocks, place blocks with more specific exceptions higher up (i.e., make sure subclassed exceptions appear before their base). The first block with a matching exception will win.</li>
<li>Place as little code as possible under the <code>try</code>. Any code that can raise an exception you are expecting belongs in the <code>try</code>; any code that should execute only when no exception is raised should go inside the <code>else</code>. That way if it raises an exception you weren't expecting it doesn't get squashed.</li>
</ul>
<p>Also, you may want to take a look at the <a href="http://docs.python.org/2/library/subprocess.html" rel="nofollow"><code>subprocess</code> module</a> instead of using <code>os.system()</code>.</p>
</div>
<span class="comment-copy">Thanks! I'm wanting code that checks to see if a file exists and then if it does, delete some files and increase a pointer. It seems the try statement may not be the best since no matter what, it deletes the files and increases the pointer regardless of if the file exists. Maybe I should be trying another statement?</span>
<span class="comment-copy">You can check if the file exists with: <code>if filename in os.listdir('path/to/dir'):</code>. Does that help?</span>
<span class="comment-copy">Seems like it would. Is the syntax simply      if filename in os.listdir('path/to/dir'):         stuff  with no "exit" type syntax?  thank you!</span>
<span class="comment-copy">You will need a new line and an indent after the <code>if filename in os.listdir('path/to/dir'):</code>. Then you write code that you would want to execute if the file exists. Also, if this answered your question, you should accept it as correct to help other people that visit this page in the future. =)</span>
<span class="comment-copy">didn't even know "accept as correct" was an option x_x. learning.</span>
<span class="comment-copy">Quick question, if it goes through the try and hits that first os.path.isfile and cannot open the file...what happens? does it exit the try?</span>
<span class="comment-copy">@user2208604 If an exception occurs during execution of the try clause, the rest of the clause is skipped. Then if its type matches the exception named after the except keyword, the except clause is executed, and then execution continues after the try statement. <a href="http://docs.python.org/3/tutorial/errors.html#handling-exceptions" rel="nofollow noreferrer">docs.python.org/3/tutorial/errors.html#handling-exceptions</a></span>
<span class="comment-copy">Maybe I should be trying something other than the try statement, because I'm only wanting the two os.system commands and the one picturenumber increase to run if that file exists. If the file does not exist, I'm wanting the jump out of this and continue with my larger script loop. Could you, perhaps, point me in the right direction for something for this? Thanks.</span>
